fix list alignments

--- a/landing.scss
+++ b/landing.scss
@@ -234,6 +234,10 @@ header {
 
       ul {
         font-size: 15px;
+        margin-left: -20px;
+        li {
+          line-height: 25px;
+        }
       }
     }
   }
